Added python grpc container to compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,8 @@ services:
     image: grpc/cxx
     volumes:
       - ./:/src
+
+  grpcpython:
+    image: grpc/python
+    volumes:
+      - ./:/src
